# practice-opengl

./: CMakeLists.txt  LICENSE  README.md  build.bat
res/shaders/: ch06_01.frag  ch07_01.frag  ch07_01.vert  ch07_02.frag  ch07_02.vert  ch07_03.frag  ch07_03.vert  ch07_04.frag  ch07_05.frag  ch07_06.frag  ch07_06.vert  ch07_07_shadowmap.frag  ch07_07_shadowmap.vert  ch07_07_shadowmap_pcf.frag  ch08_01.frag  ch08_02_alphatest.frag  ch08_03_alphablend.frag  ch08_03_alphablend.vert  ch08_05.frag  ch08_05.vert  debug_shadowpass.vert  hdr.frag  lightcube.frag  lightcube.vert  shadowpass.vert
src/: ch01.cpp  ch02.cpp  ch02_01_answer.cpp  ch02_02_answer.cpp  ch02_03_answer.cpp  ch02_04_answer.cpp  ch02_answer.cpp  ch03_01_answer.cpp  ch03_02_answer.cpp  ch04.cpp  ch04_01_answer.cpp  ch06_01_answer.cpp  ch07_01_answer.cpp  ch07_02_answer.cpp  ch07_03_answer.cpp  ch07_04_answer.cpp  ch07_05_answer.cpp  ch07_06_answer.cpp  ch07_07_answer.cpp  ch08_01_answer.cpp  ch08_02_answer.cpp  ch08_03_answer.cpp  ch08_05_answer.cpp  main.cpp
src/rendering/: Camera.cpp  Camera.h  Light.cpp  Light.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
